--- a/css/style.css
+++ b/css/style.css
@@ -382,19 +382,21 @@ header {
         margin-bottom: 15px;
         text-transform: uppercase;
         font-size: 13px; }
-      #colorlib-hero .hero-flex .text-inner .desc {
+     /*  #colorlib-hero .hero-flex .text-inner .desc {
         padding-right: 3em;
         position: relative; }
         @media screen and (max-width: 768px) {
           #colorlib-hero .hero-flex .text-inner .desc {
             padding: 1em;
             background: #fff;
-            width: 100%; } }
-        @media screen and (max-width: 480px) {
+            width: 100%; } } */
+          
+        /* @media screen and (max-width: 480px) {
           #colorlib-hero .hero-flex .text-inner .desc {
             padding: 1em;
             background: #fff;
-            width: 140%; } }
+            width: 140%; } } */
+
         #colorlib-hero .hero-flex .text-inner .desc:after {
           position: absolute;
           top: -30px;
